# SoftwareProject

./: .gitignore  README.md
Ex1/: CMakeLists.txt  MathIsFun.c  main.c  partners.txt
Ex2/: CMakeLists.txt  main.cpp  main_aux.cpp  main_aux.h  sp_image_proc_util.cpp  sp_image_proc_util.h  valgrind_report.txt
Ex3/: SPBPriorityQueue.c  SPLogger.c  SPPoint.c  ex3.depend  sp_bpqueue_unit_test.c
Ex3/include/: SPPoint.c.h
Ex3/src/: SPPoint.c.cpp
Ex3/unit_tests/: sp_bpqueue_unit_test.c  sp_logger_unit_test.c  sp_point_unit_test.c
FinalProject/: FinalProject.cbp  FinalProject.depend  FinalProject.layout  SPBPriorityQueue.c  SPBPriorityQueue.h  SPConfig.c  SPConfig.h  SPImageProc.cpp  SPInit.c  SPInit.h  SPKdArray.c  SPKdArray.h  SPKdTree.c  SPLogger.c  SPPoint.c  SP_aux.c  SP_aux.h  config.fig  main.cpp
Finale/: SPBPriorityQueue.c  SPConfig.c  SPConfig.h  SPFeatExtract.c  SPFeatExtract.h  SPImageProc.cpp  SPKDArray.c  SPKDArray.h  SPKDTree.c  SPKDTree.h  SPKdTree.c  SPListElement.c  SPLogger.c  SPLogger.h  SPPoint.c  SPPoint.h  SPSearch.c  SPSearch.h  SP_aux.c  SP_aux.h  config.fig  main.cpp  makefile
Finale/images/: img0.feats  img1.feats  img10.feats  img11.feats  img12.feats  img13.feats  img14.feats  img15.feats  img16.feats  img2.feats  img3.feats  img4.feats  img5.feats  img6.feats  img7.feats  img8.feats  img9.feats  pca.yml
